# stocproc

./: .buildinfo  .travis.yml  README.md  StocProc_FFT.html  StocProc_KLE.html  build.py  build_ext.py  example.html  flake.nix  genindex.html  index.html  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  stocproc.html  stocproc.py  test_gquad.py  test_stocproc.py
_modules/: index.html
_modules/stocproc/: method_kle.html  stocproc.html
_sources/: StocProc_KLE.rst.txt  index.txt
doc/: deploy_ghp.sh  deploy_key.enc
doc/source/: StocProc_FFT.rst  StocProc_KLE.rst  conf.py  example.rst
docs/: Makefile  examples.md  index.md
docs/api/: gquad.md  method_ft.md  method_kle.md  samplers.md  stocproc.md
docs/getting_started/: how_to_sample.md  intro.md  usage.md
docs/insights/comp_quad_schemes/: comp_quad_schemes.md
docs/pythonsnippets/: example_simple.md  example_usage_FFT.md  example_usage_KLE.md
docs/source/: StocProc_ABC.rst  StocProc_FFT.rst  StocProc_KLE.rst  StocProc_TS.rst  api.rst  conf.py  example.rst  index.rst  method_ft.rst  method_kle.rst  methods.rst  stocproc.rst
examples/: example.py  example_simple.py  example_usage_FFT.py  example_usage_KLE.py  example_usage_TanhSinh.py
stocproc/: __init__.py  acf.py  class_stocproc.py  class_stocproc_kle.py  config.py  gquad.py  helper.py  method_fft.py  method_ft.py  method_kle.py  samplers.py  stocproc.py  stocproc_c.pyx  tools.py  util.py
tests/: LorentzianSD.py  dev_method_kle.py  test_gquad.py  test_method_fft.py  test_method_ft.py  test_method_kle.py  test_stocproc.py
tests/quad_schemes_Fredholm/: comp_quad_schemes.ipynb
