[tool.poetry]
description = "Generate continuous time stationary stochastic processes from a given auto correlation function."
name = "stocproc"
version = "1.2.0"
authors = ["Richard Hartmann <richard.hartmann@tu-dresden.de>"]
license = "BSD (3 clause)"
classifiers = [
"Operating System :: OS Independent",
"License :: OSI Approved :: BSD License",
"Topic :: Utilities",
"Intended Audience :: Science/Research"
]
repository = "https://github.com/cimatosa/stocproc"
build = 'build.py'

[tool.poetry.dependencies]
python = "^3.9"
scipy = "^1.7.3"
fastcubicspline = "^1.1.5"
numpy = "^1.22.2"
mpmath = "^1.3.0"
Sphinx = "^5.3.0"
myst-parser = "^0.18.1"
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.0"
mkdocstrings = "^0.20.0"
mkdocstrings-python = "^0.8.3"
mppfc = "^1.1.2"


[tool.poetry.dev-dependencies]
setuptools = "^65.5.0"
Cython = "^0.29.25"
black = ">=22.12.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
matplotlib = "^3.6.3"
mpmath = "^1.2.1"
notebook = "^6.5.3"


[build-system]
requires = ["poetry>=1.5", "cython", "setuptools", "numpy"]
build-backend = "poetry.core.masonry.api"
