[tool.poetry]
description = "Generate continuous time stationary stochastic processes from a given auto correlation function."
name = "stocproc"
version = "1.2.0"
authors = ["Richard Hartmann <richard.hartmann@tu-dresden.de>"]
license = "BSD (3 clause)"
classifiers = [
"Operating System :: OS Independent",
"License :: OSI Approved :: BSD License",
"Topic :: Utilities",
"Intended Audience :: Science/Research"
]
repository = "https://github.com/cimatosa/stocproc"
build = 'build_ext.py'

[tool.poetry.dependencies]
python = "^3.9"
scipy = "^1.7.0"
fastcubicspline = "^1.1.5"
numpy = "^1.22.2"
mpmath = "^1.3.0"
# Sphinx = "^5.3.0"
mppfc = "^1.1.2"
numba = "^0.58.0"


[tool.poetry.dev-dependencies]
setuptools = "^65.5.0"
Cython = "^0.29.25"
black = ">=22.12.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
matplotlib = "^3.6.3"
mpmath = "^1.2.1"
notebook = "^6.5.3"

myst-parser = "^0.18.1"
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.0"
mkdocstrings = {version = "^0.23.0", extras = ["python"]}



[build-system]
requires = ["poetry>=1.5", "cython", "setuptools", "numpy"]
build-backend = "poetry.core.masonry.api"
