[tool.poetry]
description = "Generate continuous time stationary stochastic processes from a given auto correlation function."
name = "stocproc"
version = "1.1.2"
authors = ["Richard Hartmann <richard.hartmann@tu-dresden.de>"]
license = "BSD (3 clause)"
classifiers = [
"Operating System :: OS Independent",
"License :: OSI Approved :: BSD License",
"Topic :: Utilities",
"Intended Audience :: Researcher"
]
repository = "https://github.com/cimatosa/stocproc"
build = 'build.py'

[tool.poetry.dependencies]
python = "^3.11"
scipy = "^1.9.0"
mpmath = "^1.3.0"
fastcubicspline = "^1.1.3"
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]
setuptools = "^65.5.0"
Cython = "^0.29.25"
black = "^24.3.0"

[build-system]
requires = ["poetry>=1.5", "cython", "setuptools", "numpy"]
build-backend = "poetry.core.masonry.api"
